<resources>
    <string name="app_name">警网APP</string>
    <string name="news">首页</string>
    <string name="search_hint">输入关键词搜索相关新闻</string>
    <string name="searchedResult">搜索历史</string>
    <string name="search">搜索</string>
    <string name="location">地方</string>
    <string name="paper">纸媒</string>
    <string name="movie">视频</string>
    <string name="currentLocation">当前位置</string>
    <string name="selectLocation">请选择</string>
    <string name="selectCurrentLocation">请选择所在地</string>
    <string name="submit">保存并返回</string>
    <string name="channelChannel">自定义新闻栏目顺序</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密 码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_register">注 册</string>
    <string name="register">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="other_sign_in">使用第三方登录</string>
    <string name="remember_password">记住密码</string>
    <string name="title_activity_register">注 册</string>
    <string name="prompt_password_again">确认密码</string>
    <string name="input_phonenumber">手机号</string>
    <string name="validcode">验证码</string>
    <string name="getValidCode">获取验证码</string>
    <string name="bindUser">绑定用户</string>

    <string name="visibleChannelList">已添加栏目</string>
    <string name="visibleListOperation">（点击删除栏目，长按拖动栏目调整排序）</string>
    <string name="invisibleChannelList">未添加栏目</string>
    <string name="invisibleListOperation">（点击添加栏目）</string>
    <string name="refreshMore">加载新闻</string>
    <string name="cpd_destination">警界最强音，传播零距离！</string>
    <string name="menu">菜单</string>
    <string name="dismiss">取消</string>
    <string name="chat">评论</string>
    <string name="share">分享</string>
    <string name="thumbUp">点赞</string>
    <string name="favorite">收藏</string>
    <string name="myfavorite">收藏的新闻</string>
    <string name="mythumbup">赞过的新闻</string>
    <string name="open">打开菜单</string>
    <string name="cloase">关闭菜单</string>
    <string name="delete">删除</string>
    <string name="switch_night_mode">模式切换</string>
    <string name="more">更多</string>
    <string name="navByArticle">新闻导航</string>
</resources>
