<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.cpd.yuqing.activity.BindUserActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/bindUser_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/colorPrimary">
        <android.support.v7.widget.GridLayout
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="3"
            app:orientation="horizontal">
            <ImageView android:src="@drawable/register_icon_name"/>
            <EditText android:id="@+id/phoneNum_et"
                app:layout_gravity="fill"
                app:layout_columnSpan="2"
                android:background="@null"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:inputType="phone"
                android:hint="@string/input_phonenumber"/>
            <View app:layout_columnSpan="3"
                app:layout_column="0"
                app:layout_gravity="fill_horizontal"
                android:layout_height="1dp"
                android:background="@android:color/white"/>
            <ImageView android:src="@drawable/login_icon_password"/>
            <EditText android:background="@null"
                app:layout_columnWeight="2"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_gravity="fill"
                android:inputType="numberDecimal"
                android:hint="@string/validcode"
                android:id="@+id/validCode_et"/>
            <Button android:layout_alignParentRight="true"
                app:layout_columnWeight="1"
                app:layout_gravity="center_vertical"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/getValidCode_btn"
                android:textColor="@android:color/white"
                android:text="@string/getValidCode"
                android:background="@drawable/smssdk_btn"/>
            <View app:layout_columnSpan="3"
                app:layout_column="0"
                app:layout_gravity="fill_horizontal"
                android:layout_height="1dp"
                android:background="@android:color/white"/>
        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.CardView>

    <Button android:id="@+id/bindUser_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/register"
        android:background="@drawable/smssdk_btn"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bindUser_form"/>
</RelativeLayout>
