<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cpd.yuqing.activity.RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/colorPrimary">
        <android.support.v7.widget.GridLayout
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:columnCount="2"
            app:orientation="horizontal">
            <ImageView
                android:src="@drawable/register_icon_name" />
            <EditText
                android:id="@+id/phoneNum_et"
                android:maxLines="1"
                android:hint="@string/input_phonenumber"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:inputType="phone"
                app:layout_gravity="fill"
                android:background="@null" />
            <View
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_gravity="fill_horizontal"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <ImageView
                android:src="@drawable/login_icon_password"/>
            <EditText
                android:id="@+id/password_et"
                android:maxLines="1"
                android:hint="@string/prompt_password"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:inputType="textPassword"
                app:layout_gravity="fill"
                android:background="@null"/>
            <View
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_gravity="fill_horizontal"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <ImageView
                android:src="@drawable/login_icon_password"/>
            <EditText
                android:id="@+id/password_et_again"
                android:maxLines="1"
                android:hint="@string/prompt_password_again"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:inputType="textPassword"
                app:layout_gravity="fill"
                android:background="@null" />
            <View
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_gravity="fill_horizontal"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <RelativeLayout app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_gravity="fill">
                <Button android:layout_alignParentRight="true"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/getValidCode"
                    android:textColor="@android:color/white"
                    android:text="@string/getValidCode"
                    android:background="@drawable/smssdk_btn"/>
                <EditText android:layout_width="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content"
                    android:id="@+id/validCode"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:hint="@string/validcode"
                    android:inputType="numberDecimal"
                    android:textStyle="bold"
                    android:background="@null"
                    android:layout_toLeftOf="@id/getValidCode"
                    android:layout_alignBottom="@id/getValidCode"
                    android:layout_alignTop="@id/getValidCode"
                    app:layout_gravity="fill_horizontal"/>
                <View
                    android:layout_alignBottom="@id/getValidCode"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
            </RelativeLayout>
        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.CardView>

    <Button android:id="@+id/register_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@android:color/white"
        android:text="@string/register"
        android:background="@drawable/smssdk_btn"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_form"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/register_form">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/cpd_logo"
            android:scaleType="fitXY"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>
