<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/demo4"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cpd.yuqing.activity.LoginActivity">
    <!-- 头像 -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@id/form"
        android:layout_centerHorizontal="true"
        android:elevation="8dp"
        android:src="@mipmap/ic_launcher_round" />

    <!-- 表单 -->
    <android.support.v7.widget.GridLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:columnCount="2"
        app:orientation="horizontal">

        <ImageView android:src="@drawable/register_icon_name" />

        <AutoCompleteTextView
            android:id="@+id/username_et"
            android:background="@null"
            android:hint="@string/input_phonenumber"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            app:layout_gravity="fill" />

        <View
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal" />

        <ImageView android:src="@drawable/login_icon_password" />

        <EditText
            android:id="@+id/password_et"
            android:background="@null"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            app:layout_gravity="fill" />

        <View
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal" />

        <ImageView
            android:id="@+id/pw_checkbox_iv"
            android:src="@drawable/remember_password_checkbox"
            app:layout_column="0"
            app:layout_gravity="left" />

        <TextView
            android:id="@+id/pw_checkbox_tv"
            android:gravity="center_vertical"
            android:text="@string/remember_password"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/sign_in_bt"
            android:background="@drawable/sign_in_bg"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/action_sign_in"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            app:elevation="16dp"
            app:layout_columnSpan="2"
            app:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal">

            <TextView
                android:id="@+id/forget_password_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/forget_password"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/register_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/register"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </android.support.v7.widget.GridLayout>

    <!-- 第三方登录 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="48dp"
        android:paddingRight="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/other_sign_in"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/sign_in_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ssdk_oks_classic_qq" />

            <ImageButton
                android:id="@+id/sign_in_wechat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ssdk_oks_classic_wechat" />

            <ImageButton
                android:id="@+id/sign_in_sinaweibo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ssdk_oks_classic_sinaweibo" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>